--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
   color: #fff;
 }
 
-#contact {
+#contact, #about {
   background-color: #2c2c54; /* Dark background for contact section */
   color: white; /* Text color */
 }
